# Pre-Commit-Trail-

./: .gitignore  .pre-commit-config.yaml  explaination_of_prehooks.md  main.py  pyproject.toml  requirements.txt  test_main.py
